# DSK1-Work

./: README.md
1c-wastepaper-develop/: README.md  docker-compose.yml  dockerfile-1c-wastepaper
1c-wastepaper-develop/src/app/: main.py  pyproject.toml
1c-wastepaper-develop/src/app/api1c/: router.py
1c-wastepaper-develop/src/app/models/: __init__.py  db.py
1c-wastepaper-develop/src/app/utilities/: __init__.py
1c-wastepaper-develop/src/app/utilities/daemon/: __init__.py  daemon.py
advertising-management-at-gas-stations-develop/: docker-compose.yml  dockerfile_back  dockerfile_front  readme.md
advertising-management-at-gas-stations-develop/src/app/backend/: main.py  requirements.txt
advertising-management-at-gas-stations-develop/src/app/frontend/: package-lock.json  package.json
airflow-testDag/: README.md  docker-compose.yml
airflow-testDag/src/app/: pyproject.toml  requirements.txt
airflow-testDag/src/app/my_dags/: 1cDAG.py  BenzUpDAG.py  bitrix_dag.py  iicoDAG.py
airflow-testDag/src/app/my_packages/: __init__.py
db-duplication-develop/: docker-compose.yml  dockerfile-db-dubl  readme.md
db-duplication-develop/src/app/: config.py  main.py  requirements.txt
qa-telegrambot-develop/: docker-compose.yml  dockerfile-qa-tg-bot  dockerfile-qa-tg-bot-back  dockerfile-qa-tg-bot-front  readme.md
qa-telegrambot-develop/src/app/tgbot/: main.py  (+2 more)
qa-telegrambot-develop/src/app/webinterface/backend/: main.py  pyproject.toml  requirements.txt
qa-telegrambot-develop/src/app/webinterface/backend/models/: db.py
qa-telegrambot-develop/src/app/webinterface/backend/routers/: auth_router.py  context_router.py  message_router.py  miniapp_router.py  user_router.py
qa-telegrambot-develop/src/app/webinterface/backend/static/: styles.css
qa-telegrambot-develop/src/app/webinterface/backend/templates/: index.html
qa-telegrambot-develop/src/postgresql/: init.sql
telegrambot/: docker-compose.yml  dockerfile-fb-tg-bot  dockerfile-fb-tg-bot-back  readme.md
telegrambot/src/app/webinterface/backend/: main.py  pyproject.toml  requirements.txt
telegrambot/src/app/webinterface/backend/models/: db_model.py
telegrambot/src/app/webinterface/backend/routers/: __init__.py  auth_router.py  web_router.py
telegrambot/src/postgresql/: init.sql
(+95 files in other folders)
