[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "openai>=1.78.1",
    "pgvector>=0.4.1",
    "python-levenshtein>=0.27.1",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.40",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
