[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "asyncpg==0.30.0",
    "authx==1.4.3",
    "bcrypt==4.3.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "fastapi-users==14.0.1",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "greenlet==3.2.0",
    "h11==0.14.0",
    "idna==3.10",
    "jinja2>=3.1.6",
    "makefun==1.15.6",
    "pwdlib==0.2.1",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "uvicorn==0.34.2",
]
